--- a/PbiPaasWebApi/Web.config
+++ b/PbiPaasWebApi/Web.config
@@ -13,19 +13,23 @@
     <add key="powerbi:ApiUrl" value="https://api.powerbi.com/" />
     <add key="powerbi:WorkspaceCollection" value="" />
     <add key="powerbi:WorkspaceId" value="" />
+    <add key="aad:ClientId" value="" />
+    <add key="aad:ClientSecret" value="" />
+    <add key="aad:AzureServiceResourceId" value="https://management.core.windows.net/" />
+    <add key="aad:AzureServiceEndpointUri" value="https://management.azure.com/" />
+    <add key="aad:AzureGraphResourceId" value="https://graph.windows.net/" />
+    <add key="aad:AzureGraphEndpointUri" value="https://graph.windows.net/" />
+    <add key="aad:PowerBiResourceId" value="https://analysis.windows.net/powerbi/api" />
+    <add key="aad:PowerBiEndpointUri" value="https://api.powerbi.com" />
+    <add key="aad:MicrosoftGraphResourceId" value="https://graph.microsoft.com/" />
+    <add key="aad:MicrosoftGraphEndpointUri" value="https://graph.microsoft.com/" />
+    <add key="aad:RedirectUri" value="http://localhost:4200/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
-  <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -60,4 +64,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
