--- a/PbiPaasWebApi/packages.config
+++ b/PbiPaasWebApi/packages.config
@@ -13,9 +13,10 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.10.305161347" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.PowerBI.Api" version="1.0.7-preview" targetFramework="net452" />
-  <package id="Microsoft.PowerBI.Core" version="1.0.7-preview" targetFramework="net452" />
+  <package id="Microsoft.PowerBI.Api" version="1.0.12-preview" targetFramework="net452" />
+  <package id="Microsoft.PowerBI.Core" version="1.0.12-preview" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
